2013-05-15  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Streamline build-time dependency tracking procedures.

	* Makefile.in (DEPFLAGS): Adjust for simultaneous .o/.d generation.
	(RC_DEPFLAGS): New macro; define dependency generation flags for the
	resource compiler, which can't handle the new DEPFLAGS methodology.
	(%.c, %.cpp, %.rc): Simplify $OBJEXT generation procedures.
	(%.time): Remove redundantly replicated build-time procedure from...
	(%.tagged.time): ...this; just make it a prerequisite.

2013-05-15  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Add resources for specification of product version.

	* src/verinfo.rc src/verinfo.h.in: New files; included by...
	* src/guimain.rc: ...this, whence also specify version information...
	(VERINFO_FILE_NAME, VERINFO_INTERNAL_NAME, VERINFO_FILE_DESCRIPTION):
	(VERINFO_FILE_VERSION, VERINFO_FILE_VERSION_STRING): ...per these new
	manifest constant macros; define them, with propagation to...
	(ID_MAIN_WINDOW_CAPTION): ...this; keep it consistent.

	* Makefile.in (TAG_SCRIPT): Include invocation for...
	(PACKAGE_VERINFO_SCRIPT): ...this new macro; defined to interpret...
	(PACKAGE_VERINFO_PRODUCT_VERSION): ...this new substitution template;
	it is used in src/verinfo.h.in, whence verinfo.h is generated.
	(RC_INCLUDES): Add current working directory, for...
	(verinfo.h): ...this; add rule and dependencies to generate it.

2013-05-14  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Make application manifest resource definition reusable.

	* src/manifest.rc: New file; factor content from...
	* src/guimain.rc: ...here, whence include it.

2013-05-08  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Extend DMH services to delay-loaded DLL clients.

	* src/dmhcore.h (dmh_bind): New function; declare it.
	* src/dmhcore.cpp (dmh_bind): Implement it; it provides an API through
	which the setup tool makes its existing DMH services available to post